# foundry-chat-orchestrator

./: .env.example  .gitignore  README.md  justfile  pyproject.toml  users.yaml
.claude/: settings.json
.claude/agents/: grader-agent.md  test-run-agent.md
.claude/commands/: run-suite.md
.claude/skills/: foundry-driver.md
docs/superpowers/plans/: 2026-03-20-aida-test-harness.md
docs/superpowers/specs/: 2026-03-20-aida-test-harness-design.md
scenarios/: printer-issue.yaml
src/foundry_driver/: __init__.py  __main__.py  cli.py  client.py  models.py
tests/: test_cli.py  test_client.py  test_models.py
